[package]
name = "server"
version = "0.1.0"
authors = ["wuhao2016 <whaohit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "latency"
path = "src/latency_client.rs"

[[bin]]
name = "wide_latency"
path = "src/wide_latency_client.rs"

[[bin]]
name = "raft_client"
path = "src/raft_test_client.rs"

[[bin]]
name = "throughput"
path = "src/throughput_client.rs"


[[bin]]
name = "fail"
path = "src/fail_test.rs"

[dependencies]
sepaxos = { path = "../sepaxos"}
raft = { path = "../raft" }
epaxos = { path = "../epaxos"}
common = { path = "../common"}
rpc = { path = "../rpc"}
env_logger = "0.8.2"
tokio = { version = "1.0", features = ["full"] }
prost = "0.7"
thiserror = "1.0"
tokio-serde = { version = "0.8", features = ["json", "bincode"] }
tokio-stream = "0.1.6"
serde = "1.0"
tonic = "0.4"
parking_lot = "0.11"
async-stream = "0.3"
tracing = { version = "0.1", features = ["log"] }
futures = "0.3"
time = "0.2"

[build-dependencies]
tonic-build = "0.4.2"